# Django_NULL

./: .gitignore  Makefile  _base64_.py  data.txt  exaple.py  html_py.py  index.html  log.django  must_read.txt  pyproject.toml  req.txt  todo
apps/: admin.py  models.py
apps/migrations/: 0001_initial.py  0002_remove_product_id_alter_product_uuid.py  0002_user_created_at.py  0003_product_description.py  0004_alter_product_description.py
root/: asgi.py  log.django  settings.py
